--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,13 +42,14 @@
             android:layout_marginEnd="50dp"
             android:background="@drawable/rounded_corner"
             android:gravity="center"
-            android:text="0"
             android:textColor="@android:color/white"
-            android:textSize="10sp"
+            android:textSize="13sp"
+            android:textStyle="bold"
             android:translationZ="8dp"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />
+            app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
+            tools:text="0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
@@ -60,7 +61,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:menu="@menu/logout_menu"/>
+        app:menu="@menu/logout_menu" />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
