--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,6 +5,22 @@
     android:layout_height="match_parent"
     android:background="#F1F1F1">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottiAnimNetworkError"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:backgroundTint="@color/white"
+        android:translationZ="90dp"
+        android:visibility="gone"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/network_error" />
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -51,8 +67,8 @@
                         android:dropDownHeight="250dp"
                         android:hint="Twitter'da Ara"
                         android:textColor="@color/black"
-                        android:theme="@style/MaterialBaseBaseTheme.Light"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:theme="@style/MaterialBaseBaseTheme.Light" />
 
                 </androidx.cardview.widget.CardView>
 
@@ -315,4 +331,5 @@
             app:srcCompat="@drawable/ic_baseline_add_24"
             app:tint="@color/white" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
