--- a/app/src/main/res/layout/notification_recylerview_screen_tweet.xml
+++ b/app/src/main/res/layout/notification_recylerview_screen_tweet.xml
@@ -143,6 +143,14 @@
         app:layout_constraintStart_toEndOf="@+id/cardView"
         app:layout_constraintTop_toBottomOf="@+id/tweetText">
 
+        <com.google.android.exoplayer2.ui.StyledPlayerView
+            android:id="@+id/playerView"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            android:visibility="gone" />
+
+
         <ImageView
             android:id="@+id/tweetImage"
             android:layout_width="match_parent"
